--- a/index.html
+++ b/index.html
@@ -1,10 +1,114 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My first website</title>
+    <title>Rainydays | Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="company selling quality rain jackets." />
+    <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my first website.</p>
+    <header>
+      <a href="index.html" class="logo">Rainydays</a>
+      <nav>
+        <ul>
+          <li>Shop</li>
+          <li><a href="new-arrivals.html">New Arrivals</a></li>
+          <li><a href="about-us.html">About Us</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section>
+        <div>
+          <h1>Pushing the Comfort Zone</h1>
+          <p>
+            Comfortable high quality rain jackets suitable to all outdoor
+            activities.
+          </p>
+          <a href="shop.html">Shop</a>
+        </div>
+      </section>
+
+      <section>
+        <div>
+          <h2>Free shipping</h2>
+          <p>Free shipping to all destinations in Europe</p>
+        </div>
+        <div>
+          <h2>Support customer</h2>
+          <p>Customer service is available at all time in our website</p>
+        </div>
+        <div>
+          <h2>Secure payments</h2>
+          <p>
+            Several payments available. Choose the one you are the most
+            comfortable with.
+          </p>
+        </div>
+      </section>
+
+      <section>
+        <h2>Explore our products</h2>
+        <div>
+          <img
+            src="images/explore-pic.jpg"
+            alt="smiling man with red rain jacket"
+          />
+          <a href="shop-men.html">Shop Men</a>
+        </div>
+        <div>
+          <img
+            src="images/explore-pic2.jpg"
+            alt="woman with yellow rain jacket on a mountain top"
+          />
+          <a href="shop-women.html">Shop Women</a>
+        </div>
+      </section>
+
+      <section>
+        <div>
+          <h2>Customer Review</h2>
+          <p>
+            «Loving this beautiful rain jacket I recently got from RainyDays! It
+            is perfect for any outdoor activity and it has kept me dry and
+            comfortable. An extra bonus that the delivery was fast, I got my
+            package within a few days!»
+          </p>
+          <p>- Susan Johnson</p>
+        </div>
+      </section>
+      <section>
+        <h2>Popular Products</h2>
+        <div>
+          <h3>RainyDays</h3>
+          <p>Seasonal autumn rain jacket</p>
+          <p>1999,-</p>
+        </div>
+        <div>
+          <h3>RainyDays</h3>
+          <p>Seasonal spring rain jacket</p>
+          <p>1999,-</p>
+        </div>
+        <div>
+          <h3>RainyDays</h3>
+          <p>Seasonal winter</p>
+          <p>2999,-</p>
+        </div>
+        <div>
+          <h3>RainyDays</h3>
+          <p>Seasonal outdoor</p>
+          <p>2999,-</p>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <a href="contact-us.html">Help</a>
+      <p>Coopyright &copy;</p>
+    </footer>
   </body>
 </html>
