--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html"><img src="/images/RainyDays_Logo.png" class="logo"></a>
+      <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
       <nav>
         <ul>
           <li>Shop</li>
@@ -31,7 +31,7 @@
           </p>
           <a href="shop.html" class="cta">Shop</a>
         </div>
-        <img src="/images/welcome-img.jpg" alt="two men on a top of a mountain looking out in the distance">
+        <img src="images/welcome-img.jpg" alt="two men on a top of a mountain looking out in the distance">
       </section>
 
       <section class="service">
@@ -55,25 +55,11 @@
 
       <section class="explore">
         <h2>Explore our products</h2>
-        <div class="explore__content">
-          <img
-            src="images/explore-pic.jpg"
-            alt="smiling man with red rain jacket"
-            class="explore_img"
-          />
-          <div class="explore__button">
+        <div class="explore__men explore-size">
             <a href="shop-men.html" class="cta shop">Shop Men</a>
-          </div>
         </div>
-        <div class="explore__content">
-          <img
-            src="images/explore-pic2.jpg"
-            alt="woman with yellow rain jacket on a mountain top"
-            class="explore_img2"
-          />
-          <div class="explore__button">
+        <div class="explore__women explore-size">
             <a href="shop-women.html" class="cta shop">Shop Women</a>
-          </div>
         </div>
         
       </section>
@@ -98,30 +84,38 @@
 
       <section class="popular-products">
         <h2>Popular Products</h2>
-        <div>
-          <img src="images/yellow-rainjacket.jpg" alt="yellow raincoat">
-          <h3>RainyDays</h3>
-          <p>Seasonal autumn rain jacket</p>
-          <p>1999,-</p>
-        </div>
-        <div>
-          <img src="images/yellow-rainjacket.jpg" alt="yellow raincoat">
-          <h3>RainyDays</h3>
-          <p>Seasonal spring rain jacket</p>
-          <p>1999,-</p>
-        </div>
-        <div>
-          <img src="images/yellow-rainjacket.jpg" alt="yellow raincoat">
-          <h3>RainyDays</h3>
-          <p>Seasonal winter</p>
-          <p>2999,-</p>
-        </div>
-        <div>
-          <img src="images/yellow-rainjacket.jpg" alt="yellow raincoat">
-          <h3>RainyDays</h3>
-          <p>Seasonal outdoor</p>
-          <p>2999,-</p>
-        </div>
+        <a href="shop-women.html">
+          <div>
+            <img src="images/yellow-rainjacket.jpg" alt="yellow raincoat">
+            <h3>RainyDays</h3>
+            <p>Seasonal spring rain jacket</p>
+            <p>1999,-</p>
+          </div>
+        </a>
+        <a href="shop-women.html">
+          <div>
+            <img src="images/yellow-rainjacket.jpg" alt="yellow raincoat">
+            <h3>RainyDays</h3>
+            <p>Seasonal spring rain jacket</p>
+            <p>1999,-</p>
+          </div>
+        </a>
+        <a href="shop-women.html">
+          <div>
+            <img src="images/yellow-rainjacket.jpg" alt="yellow raincoat">
+            <h3>RainyDays</h3>
+            <p>Seasonal spring rain jacket</p>
+            <p>1999,-</p>
+          </div>
+        </a>
+        <a href="shop-women.html">
+          <div>
+            <img src="images/yellow-rainjacket.jpg" alt="yellow raincoat">
+            <h3>RainyDays</h3>
+            <p>Seasonal spring rain jacket</p>
+            <p>1999,-</p>
+          </div>
+        </a>
       </section>
     </main>
 
