--- a/about-us.html
+++ b/about-us.html
@@ -48,7 +48,7 @@
           <div class="footer__content">
             <p>Copyright &copy;</p>
           </div>
-          <div class="footer__content">
+          <div class="footer__content footer__icons">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-instagram"></i>
             <i class="fab fa-youtube"></i>
