--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
           </p>
           <a href="shop.html" class="cta">Shop</a>
         </div>
-        <img src="images/welcome-img.jpg" alt="two men on a top of a mountain looking out in the distance">
+        <div class="welcome__img">
+        </div>
       </section>
 
       <section class="service">
@@ -127,7 +128,7 @@
         <div class="footer__content">
           <p>Copyright &copy;</p>
         </div>
-        <div class="footer__content">
+        <div class="footer__content footer__icons">
           <i class="fab fa-facebook-f"></i>
           <i class="fab fa-instagram"></i>
           <i class="fab fa-youtube"></i>
