login page update

--- a/contact-success.html
+++ b/contact-success.html
@@ -15,8 +15,8 @@
         <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
         <nav>
           <ul>
-            <li>Shop</li>
-            <li><a href="new-arrivals.html">New Arrivals</a></li>
+            <li><a href="shop-men.html">Men</a></li>
+            <li><a href="shop-women.html">Women</a></li>
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
           </ul>
