--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
       <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
       <nav>
         <ul>
-          <li>Shop</li>
-          <li><a href="new-arrivals.html">New Arrivals</a></li>
-          <li><a href="about-us.html">About Us</a></li>
-          <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="shop-men.html">Men</a></li>
+            <li><a href="shop-women.html">Women</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
+            <div class="nav-left">
+              <div class="search-wrapper">
+                <li><input type="text" class="search-box" placeholder=""></li>
+                <i class="fas fa-search fa-xs search-icon"></i>
+              </div>
+              <div class="icon-wrapper">
+                <li><a href="login.html"><i class="far fa-user icon"></i></a></li>
+                <li><a href="favorite.html"><i class="far fa-heart icon"></i></a></li>
+                <li><a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
+              </div>
+            </div>
         </ul>
       </nav>
     </header>
@@ -30,7 +41,7 @@
             Comfortable high quality rain jackets suitable to all outdoor
             activities.
           </p>
-          <a href="shop.html" class="cta">Shop</a>
+          <a href="shop-men.html" class="cta">Shop</a>
         </div>
         <div class="welcome__img">
         </div>
@@ -88,7 +99,15 @@
         <h2>Popular Products</h2>
         <a href="shop-women.html">
           <div>
-            <img src="images/yellow-rainjacket.jpg" alt="yellow raincoat">
+            <img src="images/product_img.jpg" alt="Yellow seasonal autumn rain jacket">
+            <h3>RainyDays</h3>
+            <p>Seasonal autumn rain jacket</p>
+            <p>1999,-</p>
+          </div>
+        </a>
+        <a href="shop-women.html">
+          <div>
+            <img src="images/product_img2.jpg" alt="Black seasonal spring rain jacket">
             <h3>RainyDays</h3>
             <p>Seasonal spring rain jacket</p>
             <p>1999,-</p>
@@ -96,26 +115,18 @@
         </a>
         <a href="shop-women.html">
           <div>
-            <img src="images/yellow-rainjacket.jpg" alt="yellow raincoat">
+            <img src="images/product_img3.jpg" alt="Blue seasonal winter rain jacket">
             <h3>RainyDays</h3>
-            <p>Seasonal spring rain jacket</p>
-            <p>1999,-</p>
+            <p>Seasonal winter rain jacket</p>
+            <p>2999,-</p>
           </div>
         </a>
         <a href="shop-women.html">
           <div>
-            <img src="images/yellow-rainjacket.jpg" alt="yellow raincoat">
+            <img src="images/product_img4.jpg" alt="Red seasonal outdoor">
             <h3>RainyDays</h3>
-            <p>Seasonal spring rain jacket</p>
-            <p>1999,-</p>
-          </div>
-        </a>
-        <a href="shop-women.html">
-          <div>
-            <img src="images/yellow-rainjacket.jpg" alt="yellow raincoat">
-            <h3>RainyDays</h3>
-            <p>Seasonal spring rain jacket</p>
-            <p>1999,-</p>
+            <p>Seasonal outdoor</p>
+            <p>2999,-</p>
           </div>
         </a>
       </section>
