--- a/contact-us.html
+++ b/contact-us.html
@@ -15,8 +15,8 @@
         <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
         <nav>
           <ul>
-            <li>Shop</li>
-            <li><a href="new-arrivals.html">New Arrivals</a></li>
+            <li><a href="shop-men.html">Men</a></li>
+            <li><a href="shop-women.html">Women</a></li>
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
           </ul>
@@ -38,11 +38,11 @@
             </div>
         </section>
         <section class="contact__form">
-            <form method="POST">
+            <form action="contact-success.html">
                 <fieldset>
                     <div class="form-wrapper">
                         <label for="name">Your full name</label>
-                        <input type="text" name="name" id="name">
+                        <input type="text" name="name" id="name" required>
                         <label for="email">Your email</label>
                         <input type="email" name="email" id="email" required>
                         <label for="subject">Subject</label>
@@ -54,7 +54,7 @@
                             <option value="other">Other</option>
                         </select>
                         <label for="message">Message</label>
-                        <textarea name="message" id="message"></textarea>
+                        <textarea name="message" id="message" required></textarea>
                         <div>
                             <input type="checkbox" id="email-updates">
                             <label for="email-updates">Sign up for email updates</label>
