--- a/shop-women.html
+++ b/shop-women.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="company's contact page." />
     <link href="styles/styles.css" rel="stylesheet" />
-    <link href="styles/shop-women.css" rel="stylesheet" />
+    <link href="styles/shop.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -16,8 +16,8 @@
         <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
         <nav>
           <ul>
-            <li>Shop</li>
-            <li><a href="new-arrivals.html">New Arrivals</a></li>
+            <li><a href="shop-men.html">Men</a></li>
+            <li><a href="shop-women.html">Women</a></li>
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
           </ul>
@@ -26,43 +26,102 @@
     
     <main>
         <div class="shop-women__welcome"></div>
-        <section>
-            <div>
-                <h1>Women</h1>
-                <h2>Categories</h2>
+        <div class="product__content">
+            <section class="categories">
+                    <h1>Women</h1>
+                    <h2>Categories</h2>
                 <form method="GET">
-                    <select name="size" id="size">
-                        <option value="size">Size</option>
-                        <option value="x-small">X-small</option>
-                        <option value="small">Small</option>
-                        <option value="medium">Medium</option>
-                        <option value="Large">Large</option>
-                    </select>
-                    <select name="color" id="color">
-                        <option value="color">Color</option>
-                        <option value="black">Black</option>
-                        <option value="blue">Blue</option>
-                        <option value="green">Green</option>
-                        <option value="red">Red</option>
-                    </select>
-                    <select name="qualities" id="qualities">
-                        <option value="qualities">Qualities</option>
-                        <option value="water-resistant">Water resistant</option>
-                        <option value="waterproof">Waterproof</option>
-                        <option value="wind-resistant">Wind resistant</option>
-                        <option value="windbreaker">Windbreaker</option>
-                    </select>
-                    <select name="prices" id="prices">
-                        <option value="prices">Prices</option>
-                        <option value="$0-$100">$0-$100</option>
-                        <option value="$100-$200">$100-$200</option>
-                        <option value="$200-$300">$200-$300</option>
-                        <option value="over">Over $300</option>
-                    </select>
-                    <input type="submit" name="save-changes" value="Save changes" class="cta-green">
+                    <div class="categories-wrapper">
+                        <select name="size" id="size" class="dropdown">
+                            <option value="size">Size</option>
+                            <option value="x-small">X-small</option>
+                            <option value="small">Small</option>
+                            <option value="medium">Medium</option>
+                            <option value="Large">Large</option>
+                        </select>
+                        <select name="color" id="color" class="dropdown">
+                            <option value="color">Color</option>
+                            <option value="black">Black</option>
+                            <option value="blue">Blue</option>
+                            <option value="green">Green</option>
+                            <option value="red">Red</option>
+                        </select>
+                        <select name="qualities" id="qualities" class="dropdown">
+                            <option value="qualities">Qualities</option>
+                            <option value="water-resistant">Water resistant</option>
+                            <option value="waterproof">Waterproof</option>
+                            <option value="wind-resistant">Wind resistant</option>
+                            <option value="windbreaker">Windbreaker</option>
+                        </select>
+                        <select name="prices" id="prices"class="dropdown" >
+                            <option value="prices">Prices</option>
+                            <option value="$0-$100">$0-$100</option>
+                            <option value="$100-$200">$100-$200</option>
+                            <option value="$200-$300">$200-$300</option>
+                            <option value="over">Over $300</option>
+                        </select>
+                        <input type="submit" name="save-changes" value="Save changes" class="cta-green">
+                    </div>
+                </form>
+            </section>
+            <div class="filter">
+                <form>
+                    <div>
+                        <label for="number">Show number of products</label>
+                        <select name="number" id="number">
+                            <option value="4">4</option>
+                            <option value="10">10</option>
+                            <option value="25">25</option>
+                        </select>
+                    </div>
+                </form>
+                <form>
+                    <div>
+                        <label for="popular">Sort by</label>
+                        <select name="popular" id="popular">
+                            <option value="popular">Popular</option>
+                            <option value="lowest">Lowest price</option>
+                            <option value="highest">Highest price</option>
+                        </select>
+                    </div>
                 </form>
             </div>
-        </section>
+            <section class="popular-products">
+                <a href="shop-women.html">
+                  <div>
+                    <img src="../images/product_img.jpg" alt="Yellow seasonal autumn rain jacket">
+                    <h3>RainyDays</h3>
+                    <p>Seasonal autumn rain jacket</p>
+                    <p>1999,-</p>
+                  </div>
+                </a>
+                <a href="shop-women.html">
+                  <div>
+                    <img src="../images/product_img2.jpg" alt="Black seasonal spring rain jacket">
+                    <h3>RainyDays</h3>
+                    <p>Seasonal spring rain jacket</p>
+                    <p>1999,-</p>
+                  </div>
+                </a>
+                <a href="shop-women.html">
+                  <div>
+                    <img src="../images/product_img3.jpg" alt="Blue seasonal winter rain jacket">
+                    <h3>RainyDays</h3>
+                    <p>Seasonal winter rain jacket</p>
+                    <p>2999,-</p>
+                  </div>
+                </a>
+                <a href="shop-women.html">
+                  <div>
+                    <img src="../images/product_img4.jpg" alt="Red seasonal outdoor">
+                    <h3>RainyDays</h3>
+                    <p>Seasonal outdoor</p>
+                    <p>2999,-</p>
+                  </div>
+                </a>
+          </section>
+        </div>
+        
     </main>
     <footer>
         <div class="footer__content">
