--- a/contact-success.html
+++ b/contact-success.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="company's contact page." />
     <link href="styles/styles.css" rel="stylesheet" />
-    <link href="styles/contact-success.css" rel="stylesheet" />
+    <link href="styles/success.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -27,7 +27,7 @@
         <h1>Confirmation of received message!</h1>
         <i class="far fa-check-circle fa-7x icon"></i>
         <p>Your message ID is 591222. You will receive an email to PaulAskeladden@hotmail.com when we have looked at your message</p>
-        <a href="index.html" class="back-to-home">Back to home page</a>
+        <a href="index.html" class="btn-dark-green">Back to home page</a>
     </main>
     <footer>
         <div class="footer__content">
