--- a/checkout-success.html
+++ b/checkout-success.html
@@ -12,13 +12,13 @@
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header class="checkout-nav">
         <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
-        <a href="">Help with payment</a>
+        <a href="" id="checkout-help">Help with payment</a>
     </header>
     
     <main>
-        <div>
+        <div class="checkout-main">
             <i class="far fa-check-circle fa-7x icon"></i>
             <h1>Your order has been successfully confirmed</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis dui quis 
@@ -26,8 +26,10 @@
                 interdum justo, vitae sollicitudin ipsum augue eu mi. Proin maximus, nulla non fringilla 
                 vulputate, justo massa ullamcorper tellus, in ullamcorper lacus massa sed enim. Integer 
                 risus nisi, consequat sed vehicula vel, tincidunt vel nisi. </p>
-            <a href="shop-men.html" class="btn-dark-green">Back to shopping</a>
-            <a href="shop-men.html" class="btn-dark-green">Close</a>
+            <div class="checkout-cta">
+                <a href="shop-men.html" class="btn-dark-green check-btn">Back to shopping</a>
+                <a href="index.html" class="btn-dark-green check-btn">Close</a>
+            </div>
         </div>
         
     </main>
