--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               </div>
               <div class="icon-wrapper">
                 <li><a href="login.html"><i class="far fa-user icon"></i></a></li>
-                <li><a href="favorite.html"><i class="far fa-heart icon"></i></a></li>
+                <li><a href="favorites.html"><i class="far fa-heart icon"></i></a></li>
                 <li><a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
               </div>
             </div>
@@ -97,7 +97,7 @@
 
       <section class="popular-products">
         <h2>Popular Products</h2>
-        <a href="shop-women.html">
+        <a href="product.html">
           <div>
             <img src="images/product_img.jpg" alt="Yellow seasonal autumn rain jacket">
             <h3>RainyDays</h3>
@@ -105,7 +105,7 @@
             <p>1999,-</p>
           </div>
         </a>
-        <a href="shop-women.html">
+        <a href="product.html">
           <div>
             <img src="images/product_img2.jpg" alt="Black seasonal spring rain jacket">
             <h3>RainyDays</h3>
@@ -113,7 +113,7 @@
             <p>1999,-</p>
           </div>
         </a>
-        <a href="shop-women.html">
+        <a href="product.html">
           <div>
             <img src="images/product_img3.jpg" alt="Blue seasonal winter rain jacket">
             <h3>RainyDays</h3>
@@ -121,7 +121,7 @@
             <p>2999,-</p>
           </div>
         </a>
-        <a href="shop-women.html">
+        <a href="product.html">
           <div>
             <img src="images/product_img4.jpg" alt="Red seasonal outdoor">
             <h3>RainyDays</h3>
