--- a/shop-men.html
+++ b/shop-men.html
@@ -16,10 +16,21 @@
         <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
         <nav>
           <ul>
-            <li><a href="shop-men.html">Men</a></li>
-            <li><a href="shop-women.html">Women</a></li>
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
+              <li><a href="shop-men.html">Men</a></li>
+              <li><a href="shop-women.html">Women</a></li>
+              <li><a href="about-us.html">About Us</a></li>
+              <li><a href="contact-us.html">Contact Us</a></li>
+              <div class="nav-left">
+                <div class="search-wrapper">
+                  <li><input type="text" class="search-box" placeholder=""></li>
+                  <i class="fas fa-search fa-xs search-icon"></i>
+                </div>
+                <div class="icon-wrapper">
+                  <li><a href="login.html"><i class="far fa-user icon"></i></a></li>
+                  <li><a href="favorites.html"><i class="far fa-heart icon"></i></a></li>
+                  <li><a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
+                </div>
+              </div>
           </ul>
         </nav>
     </header>
@@ -87,7 +98,7 @@
                 </form>
             </div>
             <section class="popular-products">
-                <a href="shop-women.html">
+                <a href="product.html">
                   <div>
                     <img src="../images/product_img.jpg" alt="Yellow seasonal autumn rain jacket">
                     <h3>RainyDays</h3>
@@ -95,7 +106,7 @@
                     <p>1999,-</p>
                   </div>
                 </a>
-                <a href="shop-women.html">
+                <a href="product.html">
                   <div>
                     <img src="../images/product_img2.jpg" alt="Black seasonal spring rain jacket">
                     <h3>RainyDays</h3>
@@ -103,7 +114,7 @@
                     <p>1999,-</p>
                   </div>
                 </a>
-                <a href="shop-women.html">
+                <a href="product.html">
                   <div>
                     <img src="../images/product_img3.jpg" alt="Blue seasonal winter rain jacket">
                     <h3>RainyDays</h3>
@@ -111,7 +122,7 @@
                     <p>2999,-</p>
                   </div>
                 </a>
-                <a href="shop-women.html">
+                <a href="product.html">
                   <div>
                     <img src="../images/product_img4.jpg" alt="Red seasonal outdoor">
                     <h3>RainyDays</h3>
