--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -8,52 +8,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="company's checkout page." />
     <link href="styles/styles.css" rel="stylesheet" />
-    <link href="styles/success.css" rel="stylesheet" />
+    <link href="styles/payment.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
-        <a href="">Help with payment</a>
+        <a href="" class="payment-help">Help with payment</a>
     </header>
     
     <main>
-        <div>
-            <h1>Payment Method</h1>
-        </div>
-        <div>
-            <div>
-                <i class="fas fa-check-circle"></i>
-                <h2>Shipping info</h2>
-            </div>
-            <div>
-                <i class="fas fa-check-circle"></i>
-                <h2>Payment Method</h2>
-            </div>
-            <div>
-                <i class="fas fa-check-circle"></i>
-                <h2>Review</h2>
-            </div>
-        </div>
-        <div>
-            <form>
-                <h2>Add a payment method</h2>
-                <input type="text" name="fullname" placeholder="Name of card">
-                <input type="number" name="card-number" placeholder="Card number" min="16" max="16">
-                <input type="number" name="month" placeholder="MM" min="2" max="2">
+            <div class="payment-status">
                 <div>
-                    <input type="number" name="year" placeholder="YY" min="2" max="2">
-                    <input type="number" name="security-code" placeholder="Security code" min="3" max="3">
+                    <i class="fas fa-check-circle fa-3x payment-icon"></i>
+                    <h2>Shipping info</h2>
                 </div>
                 <div>
-                    <input type="checkbox" name="checkbox-card">
-                    <label for="checkbox-card">Remember this card</label>
+                    <i class="far fa-circle fa-3x payment-icon"></i>
+                    <h2>Payment Method</h2>
                 </div>
-            </form>
-            <a href="shopping-bag.html" class="btn-dark-green">Back</a>
-            <a href="checkout-success.html" class="btn-dark-green">Save & Continue</a>
-        </div>
-        
+                <div>
+                    <i class="far fa-circle fa-3x payment-icon_next"></i>
+                    <h2>Review</h2>
+                </div>
+            </div>
+            <div class="payment-title">
+                <h1>Payment Method</h1>
+            </div>
+            <div class="payment-info">
+                <form>
+                    <h2>Add a payment method</h2>
+                    <input type="text" name="fullname" placeholder="Name of card">
+                    <input type="number" name="card-number" placeholder="Card number" max="16">
+                    <div class="mm-yy">
+                        <input type="number" id="name" name="month" placeholder="MM" max="2">
+                        <input type="number" id="year" name="year" placeholder="YY" max="2">
+                    </div>
+                    <input type="number" name="security-code" placeholder="Security code" max="3">
+                    <div class="payment-checkbox">
+                        <input type="checkbox" name="checkbox-card">
+                        <label for="checkbox-card">Remember this card</label>
+                    </div>
+                    <div class="payment-cta">
+                        <a href="shopping-bag.html" class="btn-dark-green payment-btn back">Back</a>
+                        <a href="checkout-success.html" class="btn-dark-green payment-btn">Save & Continue</a>
+                    </div>
+                </form>
+            </div>
     </main>
     <footer>
         <div class="footer__content">
@@ -69,4 +70,4 @@
           </div>
     </footer>
 </body>
-</html>s
+</html>
