media queries start

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <li><a href="shop-women.html">Women</a></li>
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
-            <div class="nav-left">
-              <div class="search-wrapper">
-                <li><input type="text" class="search-box" placeholder=""></li>
-                <i class="fas fa-search fa-xs search-icon"></i>
-              </div>
-              <div class="icon-wrapper">
-                <li><a href="login.html"><i class="far fa-user icon"></i></a></li>
-                <li><a href="favorites.html"><i class="far fa-heart icon"></i></a></li>
-                <li><a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
-              </div>
-            </div>
         </ul>
+        <div class="search-wrapper">
+          <li><input type="text" class="search-box" placeholder=""></li>
+          <i class="fas fa-search fa-xs search-icon"></i>
+        </div>
       </nav>
+      <div class="icon-wrapper">
+        <li><a href="login.html"><i class="far fa-user icon"></i></a></li>
+        <li><a href="favorites.html"><i class="far fa-heart icon"></i></a></li>
+        <li><a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
+    </div>
+    <label for="hamburger-menu"><i class="fas fa-bars hamburger-icon"></i></label>
+    <input type="checkbox" id="hamburger-menu">
     </header>
 
     <main>
@@ -43,8 +43,7 @@
           </p>
           <a href="shop-men.html" class="cta">Shop</a>
         </div>
-        <div class="welcome__img">
-        </div>
+        <div class="welcome__img"></div>
       </section>
 
       <section class="service">
