media queries update

--- a/contact-success.html
+++ b/contact-success.html
@@ -36,7 +36,7 @@
     
     <main>
         <h1>Confirmation of received message!</h1>
-        <i class="far fa-check-circle fa-7x icon"></i>
+        <i class="far fa-check-circle fa-7x icon-success"></i>
         <p>Your message ID is 591222. You will receive an email to PaulAskeladden@hotmail.com when we have looked at your message</p>
         <a href="index.html" class="btn-dark-green">Back to home page</a>
     </main>
