--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         <li><a href="favorites.html"><i class="far fa-heart icon"></i></a></li>
         <li><a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
     </div>
-    <label for="hamburger-menu"><i class="fas fa-bars hamburger-icon"></i></label>
-    <input type="checkbox" id="hamburger-menu">
+    <div class="hamburger">
+      <label for="hamburger-menu"><i class="fas fa-bars hamburger-icon"></i></label>
+      <input type="checkbox" id="hamburger-menu">
+    </div>
     </header>
 
     <main>
