--- a/contact-us.html
+++ b/contact-us.html
@@ -35,18 +35,19 @@
     </header>
     
     <main>
-        <section class="contact__info">
-            <div>
-                <h1>Get in touch</h1>
-                <p>Customer service is available at all time in our website.</p>
-                <p>Fill in the required form to send in your query. Please fill in as much information as possible.</p>
-                <div class="contact__social">
-                    <h2>We are also on social media</h2>
-                    <a href=""><i class="fab fa-facebook-f fa-2x"></i></a>
-                    <a href=""><i class="fab fa-instagram fa-2x"></i></a>
-                    <a href=""><i class="fab fa-youtube fa-2x"></i></a>
+        <div class="main__contact">
+            <section class="contact__info">
+                <div>
+                    <h1>Get in touch</h1>
+                    <p>Customer service is available at all time in our website.</p>
+                    <p>Fill in the required form to send in your query. Please fill in as much information as possible.</p>
+                    <div class="contact__social">
+                        <h2>We are also on social media</h2>
+                        <a href=""><i class="fab fa-facebook-f fa-2x"></i></a>
+                        <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+                        <a href=""><i class="fab fa-youtube fa-2x"></i></a>
+                    </div>
                 </div>
-            </div>
         </section>
         <section class="contact__form">
             <form action="contact-success.html">
@@ -75,6 +76,7 @@
                 </fieldset>
             </form>
         </section>
+        </div>
        
     </main>
     <footer>
