media queries update

--- a/checkout-success.html
+++ b/checkout-success.html
@@ -9,17 +9,18 @@
     <meta name="description" content="company's checkout page." />
     <link href="styles/styles.css" rel="stylesheet" />
     <link href="styles/success.css" rel="stylesheet" />
+    <link href="styles/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="checkout-nav">
+    <header>
         <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
         <a href="" id="checkout-help">Help with payment</a>
     </header>
     
     <main>
-        <div class="checkout-main">
-            <i class="far fa-check-circle fa-7x icon"></i>
+        <div class="success__main">
+            <i class="far fa-check-circle fa-7x icon-success"></i>
             <h1>Your order has been successfully confirmed</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis dui quis 
                 leo scelerisque sodales. Aliquam dapibus, tortor eu auctor consectetur, eros lectus 
@@ -31,7 +32,6 @@
                 <a href="index.html" class="btn-dark-green check-btn">Close</a>
             </div>
         </div>
-        
     </main>
     <footer>
         <div class="footer__content">
