--- a/checkout-payment.html
+++ b/checkout-payment.html
@@ -7,8 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="company's checkout page." />
-    <link href="styles/styles.css" rel="stylesheet" />
     <link href="styles/payment.css" rel="stylesheet" />
+    <link href="styles/styles.css" rel="stylesheet" />
+    <link href="styles/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -36,7 +37,7 @@
                 <h1>Payment Method</h1>
             </div>
             <div class="payment-info">
-                <form>
+                <form class="form_size">
                     <h2>Add a payment method</h2>
                     <input type="text" name="fullname" placeholder="Name of card">
                     <input type="number" name="card-number" placeholder="Card number" max="16">
