--- a/login.html
+++ b/login.html
@@ -6,35 +6,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="company's login page." />
-    <link href="styles/styles.css" rel="stylesheet" />
     <link href="styles/login.css" rel="stylesheet" />
+    <link href="styles/styles.css" rel="stylesheet" />
+    <link href="styles/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
-        <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
-        <nav>
-          <ul>
-              <li><a href="shop-men.html">Men</a></li>
-              <li><a href="shop-women.html">Women</a></li>
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="contact-us.html">Contact Us</a></li>
-              <div class="nav-left">
-                <div class="search-wrapper">
-                  <li><input type="text" class="search-box" placeholder=""></li>
-                  <i class="fas fa-search fa-xs search-icon"></i>
-                </div>
-                <div class="icon-wrapper">
-                  <li><a href="login.html"><i class="far fa-user icon"></i></a></li>
-                  <li><a href="favorites.html"><i class="far fa-heart icon"></i></a></li>
-                  <li><a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
-                </div>
-              </div>
-          </ul>
-        </nav>
-    </header>
+  <header>
+    <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
+    <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
+    <input type="checkbox" id="hamburger-menu">
+    <nav>
+      <ul>
+          <li><a href="shop-men.html">Men</a></li>
+          <li><a href="shop-women.html">Women</a></li>
+          <li><a href="about-us.html">About Us</a></li>
+          <li><a href="contact-us.html">Contact Us</a></li>
+      </ul>
+      <div class="search-wrapper">
+        <li><input type="text" class="search-box" placeholder=""></li>
+        <i class="fas fa-search fa-xs search-icon"></i>
+      </div>
+      <div class="icon-wrapper">
+        <li><a href="login.html"><i class="far fa-user icon"></i></a></li>
+        <li><a href="favorites.html"><i class="far fa-heart icon"></i></a></li>
+        <li><a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
+      </div>
+    </nav>
+  </header>
     
     <main>
+      <div class="login__main">
         <div class="login__info">
           <div class="login__text">
             <h1>Welcome back!</h1>
@@ -61,6 +63,7 @@
               <p>New member? <a href=""><strong>Join us here</strong></a> </p>
           </form>
         </div>
+      </div>
     </main>
     <footer>
         <div class="footer__content">
