--- a/favorites.html
+++ b/favorites.html
@@ -3,13 +3,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rainydays | Contact</title>
+    <title>Rainydays | My favorites</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="company's contact page." />
-    <link href="styles/styles.css" rel="stylesheet" />
-    <link href="styles/favorites.css" rel="stylesheet" />
-    <link href="styles/media.css" rel="stylesheet" />
+    <meta name="description" content="My favorite products page." />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/favorites.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -40,7 +40,7 @@
         <section class="popular-products favorites">
           <h1>My favorites</h2>
             <div class="product">
-                <a href="shop-women.html">
+                <a href="products/seasonal-autumn-black.html">
                     <div>
                         <img src="images/product-img.jpg" alt="Yellow seasonal autumn rain jacket">
                         <h3>RainyDays</h3>
@@ -60,7 +60,7 @@
             </div>
             
             <div class="product">
-                <a href="shop-women.html">
+                <a href="products/seasonal-autumn-black.html">
                     <div>
                       <img src="images/product-img.jpg" alt="Black seasonal spring rain jacket">
                       <h3>RainyDays</h3>
