--- a/login.html
+++ b/login.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="company's login page." />
-    <link href="styles/login.css" rel="stylesheet" />
-    <link href="styles/styles.css" rel="stylesheet" />
-    <link href="styles/media.css" rel="stylesheet" />
+    <link href="css/login.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -44,18 +44,18 @@
           </div>
         </div>
         <div class="login__form">
-          <form>
+          <form action="index.html" >
               <h1>Login</h1>
               <label for="email">Email</label>
-              <input type="email" name="email" id="email" required>
+              <input type="email" name="email" id="email">
               <label for="password">Password</label>
-              <input type="password" name="password" id="password" required>
+              <input type="password" name="password" id="password">
               <div class="remember">
                 <div class="checkbox-remember">
                   <input type="checkbox" id="remember-me">
                   <label for="remember-me">Remember me</label>
                 </div>
-                <a href="" class="forgot-password">Forgot your password?</a>
+                <a href="contact-us.html" class="forgot-password">Forgot your password?</a>
               </div>
               <input type="submit" value="Log in" class="cta-green" id="login-button">
               <p>Or</p>
