--- a/about-us.html
+++ b/about-us.html
@@ -3,13 +3,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rainydays | Contact</title>
+    <title>Rainydays | About us</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="company's contact page." />
-    <link href="styles/styles.css" rel="stylesheet" />
-    <link href="styles/about.css" rel="stylesheet" />
-    <link href="styles/media.css" rel="stylesheet" />
+    <meta name="description" content="company's about us." />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/about.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 
