--- a/checkout-success.html
+++ b/checkout-success.html
@@ -3,13 +3,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rainydays | Checkout</title>
+    <title>Rainydays | Checkout success</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="company's checkout page." />
-    <link href="styles/styles.css" rel="stylesheet" />
-    <link href="styles/success.css" rel="stylesheet" />
-    <link href="styles/media.css" rel="stylesheet" />
+    <meta name="description" content="company's checkout success page." />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/success.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
