--- a/contact-us.html
+++ b/contact-us.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="company's contact page." />
-    <link href="styles/styles.css" rel="stylesheet" />
-    <link href="styles/contact.css" rel="stylesheet" />
-    <link href="styles/media.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/contact.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -55,11 +55,11 @@
                 <fieldset>
                     <div class="form-wrapper">
                         <label for="name">Your full name</label>
-                        <input type="text" name="name" id="name" required>
+                        <input type="text" name="name" id="name">
                         <label for="email">Your email</label>
-                        <input type="email" name="email" id="email" required>
+                        <input type="email" name="email" id="email">
                         <label for="subject">Subject</label>
-                        <select name="subject" id="subject" required>
+                        <select name="subject" id="subject">
                             <option value=""></option>
                             <option value="account">Account</option>
                             <option value="purchase">Purchase</option>
@@ -67,7 +67,7 @@
                             <option value="other">Other</option>
                         </select>
                         <label for="message">Message</label>
-                        <textarea name="message" id="message" required></textarea>
+                        <textarea name="message" id="message"></textarea>
                         <div>
                             <input type="checkbox" id="email-updates">
                             <label for="email-updates">Sign up for email updates</label>
