--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Rainydays | Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="company selling quality rain jackets." />
-    <link href="styles/styles.css" rel="stylesheet" />
-    <link href="styles/index.css" rel="stylesheet" />
-    <link href="styles/media.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -98,7 +98,7 @@
 
       <section class="popular-products">
         <h2>Popular Products</h2>
-        <a href="product.html">
+        <a href="products/seasonal-autumn-black.html">
           <div class="product">
             <img src="images/product-img.jpg" alt="Yellow seasonal autumn rain jacket">
             <h3>RainyDays</h3>
@@ -106,7 +106,7 @@
             <p>1999,-</p>
           </div>
         </a>
-        <a href="product.html">
+        <a href="products/seasonal-autumn-black.html">
           <div class="product">
             <img src="images/product-img.jpg" alt="Black seasonal spring rain jacket">
             <h3>RainyDays</h3>
@@ -114,7 +114,7 @@
             <p>1999,-</p>
           </div>
         </a>
-        <a href="product.html">
+        <a href="products/seasonal-autumn-black.html">
           <div class="product">
             <img src="images/product-img.jpg" alt="Blue seasonal winter rain jacket">
             <h3>RainyDays</h3>
@@ -122,7 +122,7 @@
             <p>2999,-</p>
           </div>
         </a>
-        <a href="product.html">
+        <a href="products/seasonal-autumn-black.html">
           <div class="product">
             <img src="images/product-img.jpg" alt="Red seasonal outdoor">
             <h3>RainyDays</h3>
