--- a/products/seasonal-autumn-black.html
+++ b/products/seasonal-autumn-black.html
@@ -3,59 +3,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rainydays | Contact</title>
+    <title>Rainydays | Seasonal autumn rain jacket</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="company's contact page." />
-    <link href=".../styles/product.css" rel="stylesheet" />
-    <link href=".../styles/styles.css" rel="stylesheet" />
-    <link href=".../styles/media.css" rel="stylesheet" />
+    <meta name="description" content="Black seasonal autumn rain jacket." />
+    <link href="../css/styles.css" rel="stylesheet" />
+    <link href="../css/product.css" rel="stylesheet" />
+    <link href="../css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="images/RainyDays_Logo.png" class="logo"></a>
+        <a href="../index.html"><img src="../images/RainyDays_Logo.png" class="logo"></a>
         <label for="hamburger-menu"><i class="fas fa-bars" id="hamburger-icon"></i></label>
         <input type="checkbox" id="hamburger-menu">
         <nav>
           <ul>
-              <li><a href="shop-men.html">Men</a></li>
-              <li><a href="shop-women.html">Women</a></li>
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="contact-us.html">Contact Us</a></li>
+              <li><a href="../shop-men.html">Men</a></li>
+              <li><a href="../shop-women.html">Women</a></li>
+              <li><a href="../about-us.html">About Us</a></li>
+              <li><a href="../contact-us.html">Contact Us</a></li>
           </ul>
           <div class="search-wrapper">
             <li><input type="text" class="search-box" placeholder=""></li>
             <i class="fas fa-search fa-xs search-icon"></i>
           </div>
           <div class="icon-wrapper">
-            <li><a href="login.html"><i class="far fa-user icon"></i></a></li>
-            <li><a href="favorites.html"><i class="far fa-heart icon"></i></a></li>
-            <li><a href="shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
+            <li><a href="../login.html"><i class="far fa-user icon"></i></a></li>
+            <li><a href="../favorites.html"><i class="far fa-heart icon"></i></a></li>
+            <li><a href="../shopping-bag.html"><i class="fas fa-shopping-cart icon" ></i></a></li>
           </div>
         </nav>
       </header>
     
     <main>
-        <div class="product__main">
+        <div class="seasonal-autumn__main">
             <div class="product__links">
-                <p><a href="index.html">Home</a> >> <a href="shop-women.html">Women rain jackets</a> >> Rainydays - seasonal autumn rain jacket</p>
+                <p><a href="../index.html">Home</a> >> <a href="../shop-women.html">Women rain jackets</a> >> Rainydays - seasonal autumn rain jacket</p>
             </div>
             <div class="main-wrapper">
                 <section class="product__img">
-                    <div class="product__wrapper2">
+                    <div class="seasonal-autumn__products-wrapper">
                         <div class="img1" >
-                            <img src="images/product-img.jpg" alt="Yellow seasonal autumn rain jacket" >
+                            <img src="../images/product-img.jpg" alt="Yellow seasonal autumn rain jacket" >
                         </div>
                         <div class="img2">
-                            <img src="images/product-img.jpg" alt="Frontside yellow seasonal autumn rain jacket">
+                            <img src="../images/product-img.jpg" alt="Frontside yellow seasonal autumn rain jacket">
                         </div>
                         <div class="img3">
-                            <img src="images/product-img.jpg" alt="Backside yellow seasonal autumn rain jacket" >
+                            <img src="../images/product-img.jpg" alt="Backside yellow seasonal autumn rain jacket" >
                         </div>
                     </div>
                 </section>
-                <section class="product__info2">
+                <section class="seasonal-autumn">
                     <div>
                         <h1>RainyDays</h1>
                         <h2>Seasonal autumn rain</h2>
@@ -74,8 +74,8 @@
                             <option value="Large">Large</option>
                         </select>
                         <div class="product__cta">
-                            <a href="shopping-bag.html" class="cta-green cta-cart">Add to cart</a>
-                            <a href="favorites.html" class="cta-heart product-heart"><i class="far fa-heart heart-icon"></i></a>
+                            <a href="../shopping-bag.html" class="cta-green cta-cart">Add to cart</a>
+                            <a href="../favorites.html" class="cta-heart product-heart"><i class="far fa-heart heart-icon"></i></a>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae turpis dictum, 
                             fermentum ligula vitae, scelerisque sem. Nunc aliquam, neque non dignissim pulvinar, 
@@ -90,7 +90,7 @@
     </main>
     <footer>
         <div class="footer__content">
-            <a href="contact-us.html">Help</a>
+            <a href="../contact-us.html">Help</a>
           </div>
           <div class="footer__content">
             <p>Copyright &copy;</p>
