--- a/shop-women.html
+++ b/shop-women.html
@@ -3,13 +3,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rainydays | Contact</title>
+    <title>Rainydays | Shop-women</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="company's contact page." />
-    <link href="styles/shop.css" rel="stylesheet" />
-    <link href="styles/styles.css" rel="stylesheet" />
-    <link href="styles/media.css" rel="stylesheet" />
+    <meta name="description" content="List of products for women." />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/shop.css" rel="stylesheet" />
+    <link href="css/media.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/b9235904b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -99,7 +99,7 @@
                 </form>
             </div>
             <section class="popular-products">
-              <a href="product.html">
+              <a href="products/seasonal-autumn-black.html">
                 <div>
                   <img src="../images/product-img.jpg" alt="Yellow seasonal autumn rain jacket">
                   <h3>RainyDays</h3>
@@ -107,7 +107,7 @@
                   <p>1999,-</p>
                 </div>
               </a>
-              <a href="product.html">
+              <a href="products/seasonal-autumn-black.html">
                 <div>
                   <img src="../images/product-img.jpg" alt="Black seasonal spring rain jacket">
                   <h3>RainyDays</h3>
@@ -115,7 +115,7 @@
                   <p>1999,-</p>
                 </div>
               </a>
-              <a href="product.html">
+              <a href="products/seasonal-autumn-black.html">
                 <div>
                   <img src="../images/product-img.jpg" alt="Blue seasonal winter rain jacket">
                   <h3>RainyDays</h3>
@@ -123,7 +123,7 @@
                   <p>2999,-</p>
                 </div>
               </a>
-              <a href="product.html">
+              <a href="products/seasonal-autumn-black.html">
                 <div>
                   <img src="../images/product-img.jpg" alt="Red seasonal outdoor">
                   <h3>RainyDays</h3>
